tests/data/bad/bad_inherit_subclass_changes.py
from __future__ import annotations

from ntc import CN
from tests.data.bad.bad_inherit_subclass import cfg

cfg = CN(cfg)
